# duckDB-tutorial

./: .gitignore  README.md  preview.py  pyproject.toml
data/: Abacate_88010560_20230608_101130.json  Abacaxi_88010560_20230608_101114.json  Absorvente Noturno_88010560_20230608_104848.json  Absorvente_88010560_20230608_104812.json  Acetona_88010560_20230608_104843.json  Alcatra_88010560_20230608_104538.json  Algodão_88010560_20230608_104825.json  Amaciante Concentrado_88010560_20230608_104954.json  Amaciante Perfumado_88010560_20230608_104956.json  Amaciante para Roupas_88010560_20230608_104955.json  Amaciante_88010560_20230608_104859.json  Ameixa_88010560_20230608_101121.json  Amora_88010560_20230608_101133.json  Anchova_88010560_20230608_104609.json  Antisséptico Bucal_88010560_20230608_104840.json  Arroz_88010560_20230608_104708.json  Atum_88010560_20230608_104550.json  Aveia_88010560_20230608_104712.json  Açaí_88010560_20230608_101136.json  Bacalhau_88010560_20230608_104549.json  Bacuri_88010560_20230608_101156.json  Balde_88010560_20230608_104918.json  Banana_88010560_20230608_101109.json  Barbeador_88010560_20230608_104826.json  Barra de Cereal_88010560_20230608_104736.json  Barriga de Porco_88010560_20230608_104619.json  Base_88010560_20230608_104855.json  Batom_88010560_20230608_104854.json  Bife de Chorizo_88010560_20230608_104603.json  Bife de Contrafilé_88010560_20230608_104548.json  Biscoito de Arroz_88010560_20230608_104731.json  Biscoito de Aveia_88010560_20230608_104734.json  Biscoito de Maisena_88010560_20230608_104734.json  (+316 more)
