[tool.poetry]
name = "duckdb-tutorial"
version = "0.1.0"
description = ""
authors = ["ericyaang <eric_yang@hotmail.com>"]
readme = "README.md"
packages = [{include = "duckdb_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.8.0"
pandas = "^2.0.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
